# AnchoredDS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  expr.py  gen.sh  readme.md  run.sh
backup/: fista_backup.cpp
sample/: sample_a.txt  sample_g.txt
src/fista/: CMakeLists.txt  Makefile  cmake_install.cmake  fista.cpp  fista.h
src/graph/: CMakeLists.txt  HLPP.hpp  Makefile  cmake_install.cmake  graph.cpp  graph.h
src/nrcore/: CMakeLists.txt  Makefile  cmake_install.cmake  nrcore.cpp  nrcore.h
src/run/: CMakeLists.txt  generator.cpp  run.cpp  setting.cpp  setting.h
src/solvers/: CMakeLists.txt  Makefile  cmake_install.cmake  dssolver.cpp  dssolver.h  fdp.cpp  fdp.h  fista.cpp  fista.h  fw.cpp  fw.h
src/tools/: getArgs.hpp  utils.hpp
